<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/gallery_dialog_fragment"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context=".gallery.GalleryDialogFragment"
        android:paddingTop="16dp"
        android:paddingHorizontal="16dp"
        android:paddingBottom="8dp"
>

        <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
               android:layout_height="wrap_content"
                android:text="@string/dialog_download"
                style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                android:textSize="18sp"
                />

        <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_fragment_content"
                />

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textWebEmailAddress"
                android:layout_marginTop="16dp"
                android:hint="@string/url_placeholder"
        />

        <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_gravity="right"
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                >

                <Button
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:id="@+id/cancel_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cancel"
                        android:textColor="@color/textColor"
                        android:textAllCaps="false"
                />

                <com.google.android.material.button.MaterialButton
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/cancel_button"
                        android:id="@+id/download_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dialog_download"
                        android:textColor="@color/buttonPositiveBackground"
                        android:radius="@dimen/dialogCornerRadius"
                        android:textAllCaps="false"
                />



        </androidx.appcompat.widget.LinearLayoutCompat>



</androidx.appcompat.widget.LinearLayoutCompat>